--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eat healthy</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Hero section -->
   <section class="Hero-area">
-    
+   <div class="hero-text">
+    <h1><span>Skip</span>The Diet,</h1>
+    <h1>Just Eat Healthy</h1>
+    <h1>With Food Network</h1>
+    <p>imagine you don't need a diet because provide healthy and delicious food for you</p>
+    <a class="link-btn" href="#">Order Food</a>
+
+   </div>
+   <div class="hero-img">
+    <img src="images/male/Group 8447.jpg" alt="">
+   </div> 
 
   </section>
 </body>
