--- a/index.html
+++ b/index.html
@@ -22,5 +22,17 @@
    </div> 
 
   </section>
+  <!-- about area -->
+  <section class="about-area">
+    <div class="about-img">
+      <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png" alt="">
+    </div>
+    <div class="about-text">
+      <h1>About me</h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque doloremque veniam deserunt aut repudiandae magnam tempora laborum pariatur et quisquam magni, quidem molestiae sunt voluptas voluptate ipsam in nostrum asperiores!</p>
+      <a class="link-btn" href="#">Contact me</a>
+    </div>
+    
+  </section>
 </body>
 </html>
