--- a/index.html
+++ b/index.html
@@ -34,5 +34,35 @@
     </div>
     
   </section>
+  <!-- recipies area -->
+  <section class="Recipies-area">
+    <div class="title">
+      <h1>My Recipies</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ipsum eius ab reiciendis praesentium fuga mollitia recusandae quis nulla architecto itaque sapiente iste aliquam atque corrupti aut quod minus, esse est? </p>
+    </div>
+    <div class="single-rec">
+      <div class="rec-one">
+        <div class="rec-img">
+          <img src="images/food/Project Cover1.jpg" alt="">          
+        </div>
+        <div class="rec-text">
+          <h1>Recipie Title</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa cum esse nulla commodi consequatur. Ut soluta iure
+            iste quasi ex.</p>
+        </div>
+      </div>
+     <div class="rec-two">
+      <div class="rec-img">
+        <img src="images/food/Project Cover1.jpg" alt="">
+        
+      </div>
+      <div class="rec-text">
+        <h1>Recipie Title</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa cum esse nulla commodi consequatur. Ut soluta iure
+          iste quasi ex.</p>
+      </div>
+     </div>
+    </div>
+  </section>
 </body>
 </html>
