--- a/index.html
+++ b/index.html
@@ -64,5 +64,31 @@
      </div>
     </div>
   </section>
+  <!-- price section -->
+  <section class="price-area">
+    <div class="prices">
+      <div class="single-price">
+        <h1>700k</h1>
+        <p>Youtube Subcribers</p>
+      </div>
+      <div class="single-price">
+        <h1>2.4m</h1>
+        <p>Instagram Follwers</p>
+      </div>
+      <div class="single-price">
+        <h1>100k</h1>
+        <p>Dribble Shot Likes</p>
+      </div>
+    </div>
+  </section>
+  <!-- footer section -->
+  <section>
+    <footer>
+      <div class="eat">
+        <h2><span>Eat</span> Fresh</h2>
+        <p>Eat healthy to life healthy. Live healthy to live happy</p>
+      </div>
+    </footer>
+  </section>
 </body>
 </html>
